save work before rebase

--- a/Day22/expenseTracker.html
+++ b/Day22/expenseTracker.html
@@ -34,7 +34,7 @@
 
                 <div class="formControl">
                     <label for="amount"></label>
-                    <input type="number" placeholder="Enter amount..." text="amount">
+                    <input type="number" placeholder="Enter amount..." class="amount">
                 </div>
                 <button class="btn">Add Transaction</button>
             </form>
