Add Day28 and update Day27 styles and layout

--- a/Day27/interactiveMaps.html
+++ b/Day27/interactiveMaps.html
@@ -961,7 +961,7 @@
     </div>
     <div class="side-panel">
         <div class="container">
-            <h1 class="country-name">India</h1>
+            <h1 class="country-name"></h1>
             <img class="flag-image" alt="flag-image">
             <ul>
                 <li>
